Actions: Deploy docs for main

--- a/main/book/developers_guide/ci_cd/coverage.html
+++ b/main/book/developers_guide/ci_cd/coverage.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-a6c29758.js";
+            window.path_to_searchindex_js = "../../searchindex-f7095ecf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -201,7 +201,7 @@
 </ol>
 <p><strong>Reading:</strong></p>
 <ol>
-<li><a href="https://github.com/mozilla/grcov">grcov readme - how to generate coverage reports</a>.</li>
+<li><a href="https://github.com/mozilla/grcov">grcov README - how to generate coverage reports</a>.</li>
 <li><a href="https://doc.rust-lang.org/rustc/instrument-coverage.html">rustc book - details on instrumentation based coverage</a>.</li>
 </ol>
 <h3 id="doc-coverage"><a class="header" href="#doc-coverage">Doc Coverage</a></h3>
