--- a/main/book/developers_guide/coding_resources/crate_structure.html
+++ b/main/book/developers_guide/coding_resources/crate_structure.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-a6c29758.js";
+            window.path_to_searchindex_js = "../../searchindex-f7095ecf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -228,7 +228,7 @@ Code to run our project on these files is contained in <code>integration_tests.r
 Rules are grouped into files and directories based on their purpose: for example, all rules for normalising boolean expressions are in <code>conjure_rules/src/normalisers/bool.rs</code></li>
 <li><code>conjure_rule_macros</code> implements the <code>#[register_rule(...)]</code> and <code>#[register_rule_set(...)]</code> procedural macros. See also: <a href="https://github.com/conjure-cp/conjure-oxide/wiki/Expression-rewriting%2C-Rules-and-RuleSets">Wiki - Rules and RuleSets</a>.</li>
 <li><code>conjure_essence_parser</code> implements the native Rust parser for Essence.
-It uses our Treesitter grammar, which is defined <em>separately</em> in<code>tree-sitter-essence</code></li>
+It uses our Tree-sitter grammar, which is defined <em>separately</em> in<code>tree-sitter-essence</code></li>
 <li><code>conjure_essence_macros</code> implements the <code>essence_expr!</code> procedural macro.</li>
 <li><code>enum_compatability_macro</code> is a macro that allows us to indicate whether certain features of Essence are compatible with certain solvers, for documentation purposes.</li>
 <li><code>randicheck</code> is a somewhat separate project developed by Ty (@TAswan) and others.
