--- a/main/book/developers_guide/contributors_guide/Git-Flow.html
+++ b/main/book/developers_guide/contributors_guide/Git-Flow.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-a6c29758.js";
+            window.path_to_searchindex_js = "../../searchindex-f7095ecf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -194,7 +194,7 @@ Having an active PR makes your work visible, allows others to help you and give 
 </li>
 <li>Assign PR to reviewer(s) when it’s ready to be merged.
 <ul>
-<li>Only Oz (@ozgurakgun) can merge PR’s, so add him as a reviewer when you want your PR to be merged.</li>
+<li>Only Oz (@ozgurakgun) can merge PRs, so add him as a reviewer when you want your PR to be merged.</li>
 <li>During reviewing, avoid force-pushing to the pull request, as this makes reviewing more difficult.
 Details on how to update a PR are given below.</li>
 </ul>
