--- a/main/book/developers_guide/contributors_guide/creating_documentation_code.html
+++ b/main/book/developers_guide/contributors_guide/creating_documentation_code.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-a6c29758.js";
+            window.path_to_searchindex_js = "../../searchindex-f7095ecf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -219,7 +219,7 @@
 </ul>
 </li>
 </ul>
-<h2 id="donts"><a class="header" href="#donts">Don’ts</a></h2>
+<h2 id="things-to-avoid"><a class="header" href="#things-to-avoid">Things to Avoid</a></h2>
 <p>Documentation generally should <strong>not</strong>:</p>
 <ul>
 <li>Repeat itself</li>
