--- a/main/book/developers_guide/contributors_guide/set-dev-env.html
+++ b/main/book/developers_guide/contributors_guide/set-dev-env.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-a6c29758.js";
+            window.path_to_searchindex_js = "../../searchindex-f7095ecf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -186,7 +186,7 @@ created: 31-03-25
 <details><summary><b>Linux (Debian/Ubuntu)</b></summary>
 <p><strong>The following software is required:</strong></p>
 <ul>
-<li>The latest version of stable Rust, installed using <a href="https://www.rust-lang.org/tools/install">Rustup</a>.</li>
+<li>The latest version of stable Rust, installed using <a href="https://www.rust-lang.org/tools/install">rustup</a>.</li>
 <li>A C/C++ compilation toolchain and libraries:
 <ul>
 <li>Debian, Ubuntu and derivatives: <code>sudo apt install build-essential libclang-dev</code></li>
@@ -205,7 +205,7 @@ created: 31-03-25
 <details><summary><b>MacOS</b></summary>
 <p><strong>The following software is required:</strong></p>
 <ul>
-<li>the latest version of stable Rust, installed using <a href="https://www.rust-lang.org/tools/install">Rustup</a>.</li>
+<li>the latest version of stable Rust, installed using <a href="https://www.rust-lang.org/tools/install">rustup</a>.</li>
 <li>an XCode Command Line Tools installation (installable using <code>xcode-select --install</code>)</li>
 <li>CMake: <code>brew install cmake</code> (for SAT solving)</li>
 <li><a href="https://github.com/conjure-cp/conjure">Conjure</a>.</li>
