--- a/main/book/documentation/sets/Conjure-Vertical-Set-Rules-Occurrence-Representation.html
+++ b/main/book/documentation/sets/Conjure-Vertical-Set-Rules-Occurrence-Representation.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-a6c29758.js";
+            window.path_to_searchindex_js = "../../searchindex-f7095ecf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -191,7 +191,7 @@
 <li>matches the generator to an expression of the form “iPat &lt;- s”, iPat, later called “i” is a quantified variable</li>
 <li>checks that s is a set, and that it has Occurrence representation</li>
 <li>retrieves matrix m representing this set, and its domain</li>
-<li>returns Comprehension with same body, original generator is replaced by a generator specifying the domain of the quantified variable, followed by a condition that the ith entry of the Occurrence matrix is true.</li>
+<li>returns Comprehension with same body, original generator is replaced by a generator specifying the domain of the quantified variable, followed by a condition that the i-th entry of the Occurrence matrix is true.</li>
 </ol>
 <ul>
 <li>i.e. it loops over the given domain and checks that element “i” is present in the set.</li>
@@ -232,7 +232,7 @@
               [q3 in B | q3 : int(0..6), A_Occurrence[q3]]
 </code></pre>
 <h2 Occurrence="" id="set-in"><a class="header" href="#set-in">Set-in</a></h2>
-<p>Set-in rule for Occurrence representation. In Occurrence representation, an element “i” is in a set if and only if the “ith” entry of the Occurrence matrix is true.</p>
+<p>Set-in rule for Occurrence representation. In Occurrence representation, an element “i” is in a set if and only if the “i-th” entry of the Occurrence matrix is true.</p>
 <ul>
 <li>This rule is not necessary, “in” can be implemented using the comprehension rule above.</li>
 </ul>
