--- a/main/book/documentation/sets/expression_rewriting_rules_and_rulesets.html
+++ b/main/book/documentation/sets/expression_rewriting_rules_and_rulesets.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-a6c29758.js";
+            window.path_to_searchindex_js = "../../searchindex-f7095ecf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -214,7 +214,7 @@ For testing, we currently just choose the first rule</li>
 <ul>
 <li>be <strong>flexible</strong> - instead of hard coding the rules, we want an easy way to extend the list of rules and to decide which rules to use, both for ourselves and for any users who may wish to use conjure-oxide in their projects</li>
 <li>be <strong>deterministic</strong> (in a loose sense of the term) - for a given input, set of rules, and a given set of answers to all rule selection questions (see above), the rewriter must always produce the same output</li>
-<li>happen in a single step, instead of doing multiple passes over the model (like it is done in Saville Row currently)</li>
+<li>happen in a single step, instead of doing multiple passes over the model (like it is done in Savile Row currently)</li>
 </ul>
 <h1 id="rules"><a class="header" href="#rules">Rules</a></h1>
 <h2 id="overview-1"><a class="header" href="#overview-1">Overview</a></h2>
@@ -408,7 +408,7 @@ NOTE: The <code>order</code> of a <code>RuleSet</code> should not be thought of 
 It only provides a consistent order of operations when resolving the final set of rules</p>
 </blockquote>
 <h2 id="concrete-example--sat-backend-pipeline"><a class="header" href="#concrete-example--sat-backend-pipeline">Concrete Example:  SAT Backend Pipeline</a></h2>
-<p>To see how rules and rulesets work in practice, let’s walk through the SAT backend’s transformation of a simple Essence model.</p>
+<p>To see how rules and rulesets work in practice, let’s walk through the SAT backend transformation of a simple Essence model.</p>
 <blockquote>
 <p><strong>Note:</strong> The actual RuleSet names and groupings in the codebase may differ from this simplified explanation, but the general priority ordering and transformation pipeline described here is accurate.</p>
 </blockquote>
@@ -441,7 +441,7 @@ fn cnf_int_ineq(expr: &amp;Expression) -&gt; Result&lt;Expression, RuleApplicati
     // Into: complex boolean expression
 }
 <span class="boring">}</span></code></pre>
-<h4 id="3-tseitin-transformation-rules-lowest-priority"><a class="header" href="#3-tseitin-transformation-rules-lowest-priority">3. Tseitin Transformation Rules (Lowest Priority)</a></h4>
+<h4 id="3-tseytin-transformation-rules-lowest-priority"><a class="header" href="#3-tseytin-transformation-rules-lowest-priority">3. Tseytin Transformation Rules (Lowest Priority)</a></h4>
 <p><strong>RuleSet</strong>: <code>boolean</code></p>
 <p>These rules convert the resulting boolean expressions into Conjunctive Normal Form:</p>
 <pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
