--- a/main/book/getting_started/command-line/logging.html
+++ b/main/book/getting_started/command-line/logging.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-a6c29758.js";
+            window.path_to_searchindex_js = "../../searchindex-f7095ecf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -222,7 +222,7 @@ debugging):</p>
 <ul>
 <li>Integer-to-boolean conversions</li>
 <li>Operation transformations</li>
-<li>Tseitin transformations</li>
+<li>Tseytin transformations</li>
 <li>All rules that were tried and applied</li>
 </ul>
 <p>For more detailed testing output (including JSON traces and rewritten models), run specific tests:</p>
